~ Our work section generation improved

--- a/_sass/organisms/home.scss
+++ b/_sass/organisms/home.scss
@@ -953,10 +953,10 @@
 			gap: 2.5rem;
 		}
 
-		.categories {
+		.industries {
 			min-width: 17.5rem;
 
-			.category {
+			.industry {
 				text-wrap: nowrap;
 				padding: 1rem;
 				font-size: 1.125rem;
