~ Navbar items order

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,10 +48,10 @@
 						<nav class="l-header-main-menu">
 							<ul aria-labelledby="l-header-main-menu-label">
 								<li>
-									<a class="header-link" href="#what-we-do""> {% t page-whatwedo.title %}</a>
+									<a class="header-link" href="#what-we-do"> {% t page-whatwedo.title %}</a>
 								</li>
 								<li>
-									<a class="header-link" href="#how-we-work">{% t page-howwework.title %}</a>
+									<a class="header-link" href="#help-clients">{% t page-help-client.title %}</a>
 								</li>
 								<li>
 									<a class="header-link" href="#about-us">{% t page-aboutus.title %}</a>
