--- a/_sass/organisms/home.scss
+++ b/_sass/organisms/home.scss
@@ -977,6 +977,19 @@
 			gap: 1.5rem;
 			display: none;
 
+			.image {
+				flex: 1;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				img {
+					width: 100%;
+					max-height: 85px;
+					height: unset;
+				}
+			}
+
 			@media (max-width: bps.$L) {
 				flex-direction: column;
 			}
