~ 404 page styling improved

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@
 									</button>
 				</div>
 			</header>
-			<main id="hlavni-obsah" class="{{ page.main_class }}"> {{ content }}
+			<main id="main-content" class="{{ page.main_class }}"> {{ content }}
 			</main>
 			<img src="{{ site.assetsPath }}/img/pages/home/advantages-big-logo.svg" class="home-bg-pic">
 			<footer class="l-footer">
