--- a/_sass/organisms/home.scss
+++ b/_sass/organisms/home.scss
@@ -982,11 +982,13 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
+				width: 100%;
 
 				img {
 					width: 100%;
+					height: 100%;
 					max-height: 85px;
-					height: unset;
+					object-fit: contain;
 				}
 			}
 
