- language switch button
should be uncommented once the translation is ready

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,13 +81,13 @@
 															{%- endif -%}
 													{%- endif -%}
 											{%- endcapture -%}
-						<a href="{{ link }}" >
-													{%- if site.lang == "cs" -%}
-															English
-													{%- else if site.lang == "en" -%}
-															Česky
-													{%- endif -%}
-						</a>
+<!--						<a href="{{ link }}" >-->
+<!--													{%- if site.lang == "cs" -%}-->
+<!--															English-->
+<!--													{%- else if site.lang == "en" -%}-->
+<!--															Česky-->
+<!--													{%- endif -%}-->
+<!--						</a>-->
 					</div>
 									<button class="menu-toggle">
 										<img id="menu-icon" src="{{ site.assetsPath }}/img/icons/menu_icon.svg" alt="Menu icon">
